src/test/ui/macros/macro-match-nonterminal.stderr
error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:2:8
   |
LL |     ($a, $b) => {
   |        ^

error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:2:10
   |
LL |     ($a, $b) => {
   |          ^^
   |
   = note: `#[deny(missing_fragment_specifier)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #40107 <https://github.com/rust-lang/rust/issues/40107>

error: aborting due to 2 previous errors

